--- a/src/Acme.BookStore.Domain.Shared/Localization/BookStore/en.json
+++ b/src/Acme.BookStore.Domain.Shared/Localization/BookStore/en.json
@@ -1,9 +1,60 @@
 {
   "Culture": "en",
   "Texts": {
-    "AppName": "BookStore",
     "Menu:Home": "Home",
+    "Menu:ContactUs": "Contact Us",
+    "Menu:ArticleSample": "Article Sample",
+    "Home": "Home",
+    "Welcome": "Welcome",
     "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information visit",
-    "Welcome": "Welcome"
+    "Date": "Date",
+    "Permission:Dashboard": "Dashboard",
+    "Menu:Dashboard": "Dashboard",
+    "Menu:HomePage": "Home page",
+    "Dashboard": "Dashboard",
+    "ExternalProvider:Google": "Google",
+    "ExternalProvider:Google:ClientId": "Client ID",
+    "ExternalProvider:Google:ClientSecret": "Client Secret",
+    "ExternalProvider:Microsoft": "Microsoft",
+    "ExternalProvider:Microsoft:ClientId": "Client ID",
+    "ExternalProvider:Microsoft:ClientSecret": "Client Secret",
+    "ExternalProvider:Twitter": "Twitter",
+    "ExternalProvider:Twitter:ConsumerKey": "Consumer Key",
+    "ExternalProvider:Twitter:ConsumerSecret": "Consumer Secret",
+    "NewsletterHeader": "Subscribe to the newsletter!",
+    "NewsletterInfo": "Get information about the latest happenings.",
+    "NewsletterPreference_Default": "Default Newsletter",
+    "NewsletterPrivacyAcceptMessage": "I accept the <a href='/privacy-policy'>Privacy Policy</a>.",
+    "Language": "Language",
+    "Search": "Search",
+    "LoadMore": "Load More",
+    "Settings": "Settings",
+    "Theme": "Theme",
+    "DeviceTheme": "Device theme",
+    "Dark": "Dark",
+    "Light": "Light",
+    "Unspecified": "System",
+    "SeeAllUsers": "See All Users",
+    "TakePhoto": "Take Photo",
+    "ChoosePhoto": "Choose Photo",
+    "Menu:BookStore": "Book Store",
+    "Menu:Books": "Books",
+    "PublishDate": "Publish date",
+    "NewBook": "New book",
+    "Name": "Name",
+    "Type": "Type",
+    "Price": "Price",
+    "CreationTime": "Creation time",
+    "AreYouSureToDelete": "Are you sure you want to delete this item?",
+    "Enum:BookType.0": "Undefined",
+    "Enum:BookType.1": "Adventure",
+    "Enum:BookType.2": "Biography",
+    "Enum:BookType.3": "Dystopia",
+    "Enum:BookType.4": "Fantastic",
+    "Enum:BookType.5": "Horror",
+    "Enum:BookType.6": "Science",
+    "Enum:BookType.7": "Science fiction",
+    "Enum:BookType.8": "Poetry"
   }
 }
+
